# simulated-orderbook-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
flowcharts/: cancelorder.drawio  order.drawio
include/: orderbook.h  orders.h  pch.h  polymarketdata.h
src/: learning.txt  main.cpp  orderbook.cpp  orders.cpp
